fix: use background.webp at 350% on mobile instead of 19x6 jpg
Revert to the working pattern from commit 6c6c68b -
same background.webp image, zoomed to 350% on mobile

--- a/style.css
+++ b/style.css
@@ -618,9 +618,8 @@ main {
   }
 
   body {
-    background-image: url('background19x6.jpg');
-    background-size: auto 100vh;
-    background-repeat: no-repeat;
+    background-image: url('background.webp');
+    background-size: 350%;
     background-position: center;
     background-attachment: scroll;
   }
